--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
+    "chai": "^3.5.0",
     "mocha": "^3.2.0"
   },
   "scripts": {
