--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0",
-    "rollup": "^0.38.1"
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "rollup": "^0.55.5"
   },
   "scripts": {
     "test": "mocha --compilers js:babel-register",
-    "build": "rollup -i src/DelegableProxy.js -o index.js; babel index.js --out-file index.js"
+    "build": "rollup src/DelegableProxy.js --o index.js --f cjs; babel index.js --out-file index.js"
   },
   "babel": {
     "presets": [
