Added test reporter for code climate in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=7f9504f28330935358c746ac95098e2e3068d21785608f196b772afcd23382bb
 language: node_js
 node_js:
   - "stable"
 before_script:
   - yarn build
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
