--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "babel-register": "^6.18.0",
     "chai": "^4.1.2",
     "mocha": "^5.0.0",
+    "nyc": "^11.4.1",
     "rollup": "^0.55.5"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-register",
+    "test": "nyc --reporter=lcov mocha --require babel-register",
     "build": "rollup src/DelegableProxy.js --o index.js --f cjs; babel index.js --out-file index.js"
   },
   "babel": {
